--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ POSTGRES_HOST = localhost
 POSTGRES_PORT = 5432
 POSTGRES_USER = bucketeer
 POSTGRES_PASSWORD = bucketeer_pass
-POSTGRES_DB = transaction
+POSTGRES_DB = transactions
 APP_PORT = 8081
