add consume message broker

--- a/.env .example
+++ b/.env .example
@@ -3,5 +3,10 @@ APP_PORT = 8080
 POSTGRES_HOST = localhost
 POSTGRES_PORT = 5432
 POSTGRES_USER = user
-POSTGRES_PASSWORD = password
+POSTGRES_PASS = password
 POSTGRES_DB = dbname
+
+AMQP_HOST = localhost
+AMQP_USER = AMQP_USER
+AMQP_PASS = AMQP_PASS
+AMQP_PORT = 5672
