--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
+APP_PORT = 8081
+
 POSTGRES_HOST = localhost
 POSTGRES_PORT = 5432
 POSTGRES_USER = bucketeer
-POSTGRES_PASSWORD = bucketeer_pass
+POSTGRES_PASS = bucketeer_pass
 POSTGRES_DB = transactions
-APP_PORT = 8081
+
+AMQP_HOST = localhost
+AMQP_USER = guest
+AMQP_PASS = guest
+AMQP_PORT = 5672
